2014-04-30  Vanessa Gil <vanessa.gil@artica.es>
	
	* operation/companies/company_detail.php: Verify
	deletion of companies.

2014-04-29  Vanessa Gil <vanessa.gil@artica.es>
	
	* general/home.php
	  godmode/setup/newsboard.php
	  include/functions_db.php
	  operation/invoices/invoice_detail.php
	  operation/invoices/invoice_template.php
	  operation/invoices/invoices.php
	  operation/user_report/monthly.php
	  operation/user_report/report_monthly.php: Fixed several
	bugs (#725, #728, #742, #744).

2014-04-29  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* operation/incidents/incident_detail.php: Now the new
	resolution epilog text is saved as a ticket workunit.

2014-04-28 Sancho Lerena <slerena@artica.es>

	* operation/newsletter/address_definition.php: Fixed an ACL
	problem which break address creation from non admin users.

2014-04-11  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/js/integria.js: Fixed an error on the function
	"bindCompanyAutocomplete".

	* operation/companies/company_detail.php: Added a datepicker
	to the last update input.

2014-04-07  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* operation/leads/lead_detail.php: Added code to process
	or delete an uploaded file via ajax. Now an admin user can
	see the mail tab in a lead.

	* operation/leads/lead_forward.php: Removed the atachment
	files of the forward lead mails.

	* operation/leads/lead_mail.php: Now is possible to send
	files as attachment of the lead mails.

2014-04-07  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* install.php: Now the data of "integria_dbdata.sql" is
	is used always.

	* integria_demo.sql: Deleted some insertions to adapt the
	file to the new reality.

	* operation/incidents/incident_detail.php,
	  integria_dbdata.php: Minor fixes.

2014-04-04  Sancho Lerena <slerena@artica.es>

	* integria_db.sql,
	integria_dbdata.sql: Fixed broken SQL. Updated some 
	version in SQL.

2014-04-04  Alejandro Gallardo <alejandro.gallardo@artica.es>
